# deterministic-doc-orchestrator

./: .agentignore  Agentic-Orchestrator-Article.md  Agentic-Orchestrator.md  CHANGELOG.md  CLAUDE.md  Core-Structureal-Blueprint.md  GEMINI.md  LICENSE  README.md  archive_manager.py  audit_state.py  extract.py  init_workspace.py  install.sh  integrate.py  interview.py  orchestrator.py  promote.py  pyproject.toml  redteam.py  state_graph_schema.py
.agents/: workspace_registry.yml
.agents/memory/: activeContext.md  productContext.md  systemPatterns.md
.agents/rules/: package-management.md  python.md  security.md  testing.md
.agents/schemas/: DESIGN_Template.md  MiniPRD_template.md  SuperPRD_Template.md  hypergraph_schema.md  plan_Template.md  todo_Template.md
.agents/scripts/: archive_specs.py  hypergraph_updater.py
.claude/commands/: architect.md  audit.md  baseline.md  co-research.md  consult-cto.md  create-issue.md  create-skill.md  deepdive.md  discover.md  document.md  execute.md  extract.md  forge_persona.md  hyper-architect.md  hyper-audit.md  hyper-baseline.md  hyper-co-research.md  hyper-consult-cto.md  hyper-create-issue.md  hyper-create-skill.md  hyper-deepdive.md  hyper-discover.md  hyper-document.md  hyper-execute.md  hyper-learning-opportunity.md  hyper-new-workflow.md  hyper-peer-review.md  hyper-prompt-engineer.md  hyper-redteam.md  hyper-refresh-memory.md  hyper-resolve.md  hyper-session-update.md  hyper-sop.md  hyper-status.md  hyper-stitch-design.md  integrate.md  (+19 more)
docs/: MasterSOP.md  Troubleshooting.md  Tutorial.md  Whitepaper.md  install.sh
(+89 files in other folders)
